# kindlepad

./: .gitignore  README.md  config.example.yaml  generate_preview.py  pair_dirigera.py  pyproject.toml
kindle/: config.sh  generate_screens.py  install.sh  kindlepad.sh  run.sh  touch_reader.py
server/: __main__.py  app.py  auth.py  config.py  routes.py  touchmap.py
server/integrations/: dirigera_client.py  tfl_client.py  weather_client.py
server/renderer/: components.py  engine.py  theme.py
tests/: test_renderer.py  test_tfl_client.py  test_touchmap.py
